# template-workflow-extract-reconcile-invoice

./: .copier-answers.yml  .env.template  .gitignore  README.md  pyproject.toml  task.md
configs/: config.json
src/extraction_review/: clients.py  config.py  index_contract.py  json_util.py  metadata_workflow.py  process_file.py  schema.py
tests/: test_workflow.py
ui/: README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: App.tsx  main.tsx  vite-env.d.ts
ui/src/lib/: ContractsDropdown.tsx  MetadataProvider.tsx  ToolbarContext.tsx  WorkflowProgress.tsx  client.ts  config.ts  export.ts  useMetadata.ts  utils.ts
ui/src/pages/: HomePage.module.css  HomePage.tsx  ItemPage.tsx
